update UserService update method to update only not empty fields